--- a/device/mellanox/x86_64-nvidia_sn5600-r0/Mellanox-SN5600-C256S1/buffers_defaults_objects.j2
+++ b/device/mellanox/x86_64-nvidia_sn5600-r0/Mellanox-SN5600-C256S1/buffers_defaults_objects.j2
@@ -71,7 +71,7 @@
         "ingress_lossy_profile": {
             "pool":"ingress_lossless_pool",
             "size":"0",
-            "dynamic_th":"3"
+            "dynamic_th":"7"
         },
         "egress_lossless_profile": {
             "pool":"egress_lossless_pool",
@@ -81,7 +81,7 @@
         "egress_lossy_profile": {
             "pool":"egress_lossy_pool",
             "size":"9216",
-            "dynamic_th":"7"
+            "dynamic_th":"-6"
         },
         "q_lossy_profile": {
             "pool":"egress_lossy_pool",
@@ -97,6 +97,11 @@
             "pool": "egress_lossy_pool",
             "size": "0",
             "dynamic_th" : "-3"
+        },
+        "q_lossy_infinity_profile": {
+            "pool": "egress_lossy_pool",
+            "size": "0",
+            "dynamic_th" : "7"
         }
     },
 {%- endmacro %}
@@ -150,18 +155,13 @@
     "BUFFER_QUEUE": {
 {% if dynamic_mode is not defined %}
 {% for port in port_names_active.split(',') %}
-        "{{ port }}|0": {
+        "{{ port }}|0-3": {
             "profile" : "q_lossy_profile"
-        },
-{% endfor %}
-{% for port in port_names_active.split(',') %}
-        "{{ port }}|1-3": {
-            "profile" : "q_lossy_minus_7_profile"
         },
 {% endfor %}
 {% for port in port_names_active.split(',') %}
         "{{ port }}|4": {
-            "profile" : "q_lossy_profile"
+            "profile" : "q_lossy_infinity_profile"
         },
 {% endfor %}
 {% for port in port_names_active.split(',') %}
