Support per SKU PFC and PFC watchdog priority set
Signed-off-by: Stephen Sun <stephens@nvidia.com>

--- a/device/mellanox/x86_64-nvidia_sn5600-r0/Mellanox-SN5600-C256S1/qos.json.j2
+++ b/device/mellanox/x86_64-nvidia_sn5600-r0/Mellanox-SN5600-C256S1/qos.json.j2
@@ -167,4 +167,12 @@
     },
 {%- endmacro %}
 
+{%- macro generate_pfcwd_per_sku() -%}
+""
+{%- endmacro -%}
+
+{%- macro generate_pfc_per_sku() -%}
+""
+{%- endmacro -%}
+
 {%- include 'qos_config.j2' %}
