--- a/files/build_templates/qos_config.j2
+++ b/files/build_templates/qos_config.j2
@@ -4,6 +4,8 @@
 {%- set SYSTEM_PORT_ALL = [] %}
 {%- set PORT_QOS_BYPASS = [] %}
 
+{%- import 'port_role.j2' as port_role -%}
+
 {%- set voq_chassis = false %}
 {%- if DEVICE_METADATA is defined and DEVICE_METADATA['localhost']['switch_type'] is defined and  DEVICE_METADATA['localhost']['switch_type']  == 'voq' %}
 {%-  set voq_chassis = true %}
@@ -67,6 +69,9 @@
     {%- if port_names_list_active.append(port) %}{%- endif %}
 {%- endfor %}
 {%- set port_names_active = port_names_list_active | join(',') -%}
+
+{# Initialize port roles #}
+{%- set _ = port_role.determine_ports_roles(PORT_ALL) %}
 
 {%- set tunnel_qos_remap_enable = false %}
 {%- if ((SYSTEM_DEFAULTS is defined) and ('tunnel_qos_remap' in SYSTEM_DEFAULTS) and (SYSTEM_DEFAULTS['tunnel_qos_remap']['status'] == 'enabled')) %}
